  * Link to Methodology from project summary chart
  * Navigation sidebar in projects can be kept open while navigating across views
  * Refactored dots-menu to make it available in any view
  * Remove tag color from issue titles in issue summary
  * Use shared noscript partial
  * Use user model reference for activities instead of user email
  * Upgraded gems: puma, sass-rails
  * Bugs fixed:
    - Fix textile preview not showing on issues with very long text
    - Long project names interfering with search bar expansion
    - Report 'Download' button becoming a disabled 'Processing...' button once clicked
    - SemVer pre-release appending character
    - Set :author when creating Evidence from an Issue
    - Sidebar items not showing active state
    - Stop bin/setup from creating folders outside dradis-ce/
    - bin/setup will not error if the attachments directory already exists
    - Bug tracker items: #560
  * New integrations:
    - [new integration #1]
  * Integration enhancements:
    - Nexpose: better cipher wrapping coverage
    - Nikto: support new nested <niktoscan> format
  * Reporting enhancements:
    - HTML reports now use main app's markup rendering
  * REST/JSON API enhancements:
    - [API enhancement #1]
  * Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v3.16 (February 2020)
  * Update app to new Tylium layout
  * Upgrade to Rails 5.2.4.1
  * Add revision history for cards
  * Remove mysql2 gem dependency
  * Bugs fixed:
    - Fix errors on content overwrite flash messages
    - Fail and redirect to login instead of raising an error when attempting to log in as a user that has been removed
    - Fix Cancel link path for the Note Edit page

v3.15 (November 2019)