@@ -38,6 +38,28 @@ describe 'Board pages:' do
         expect(page).to have_text board.name
         expect(page).not_to have_text node_board.name
       end
+
+      context 'creating a board using a template', js: true do
+        it 'creates the board using the template data' do
+          template_path = Rails.root.join('spec/fixtures/files/methodologies/')
+          allow(Methodology).to receive(:pwd).and_return(template_path)
+
+          board
+          visit project_boards_path(current_project)
+
+          click_link 'Create new methodology...'
+
+          find('#modal-board-new', visible: true)
+          find('#template').find(:option, 'Methodology Template v3').select_option
+
+          click_button 'Add methodology'
+
+          board = Board.last
+          list = board.lists.first
+          expect(list.name).to eq('To Do')
+          expect(list.cards.first.name).to eq('Card 1')
+        end
+      end
     end
 
     describe 'when in show page' do
