@@ -20,6 +20,7 @@ v3.17 (Month 2020)
   * Use user model reference for activities instead of user email
   * Upgraded gems: puma, sass-rails
   * Bugs fixed:
+    - Fix bug with v3 board templates not uploading
     - Fix textile preview not showing on issues with very long text
     - Long project names interfering with search bar expansion
     - Report 'Download' button becoming a disabled 'Processing...' button once clicked
